[gd_scene load_steps=4 format=3 uid="uid://bb4bqi8ghs0su"]

[ext_resource type="Script" uid="uid://gt2igi5lslwk" path="res://scripts/player_ui.gd" id="1_jkj6h"]
[ext_resource type="Theme" uid="uid://c3bfsu14hvt5x" path="res://global_theme.tres" id="2_sk4pr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48xfa"]

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_jkj6h")

[node name="ScoreBoard" type="HBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_sk4pr")

[node name="Player1Score" type="RichTextLabel" parent="ScoreBoard"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 72
text = "Player 1: 0"

[node name="Player2Score" type="RichTextLabel" parent="ScoreBoard"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 72
text = "Player 2: 0"

[node name="GameOver" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("2_sk4pr")

[node name="ResultText" type="RichTextLabel" parent="GameOver"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/normal_font_size = 72
theme_override_font_sizes/bold_font_size = 72
bbcode_enabled = true
text = "Player 1 won!"
horizontal_alignment = 1

[node name="RestartGame" type="Button" parent="GameOver"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Restart game"

[node name="MainMenu" type="TextureRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_sk4pr")

[node name="Vbox" type="VBoxContainer" parent="MainMenu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="RichTextLabel" parent="MainMenu/Vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/normal_font_size = 72
theme_override_font_sizes/bold_font_size = 72
bbcode_enabled = true
text = "Connect'Em!"
horizontal_alignment = 1

[node name="StartGame" type="Button" parent="MainMenu/Vbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Start game"

[node name="Game Settings" type="VBoxContainer" parent="MainMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1101.0
offset_top = 474.0
offset_right = 1263.0
offset_bottom = 629.0

[node name="ScoreLabel" type="Label" parent="MainMenu/Game Settings"]
unique_name_in_owner = true
layout_mode = 2
text = "Score needed to win:"

[node name="ScoreContainer" type="HBoxContainer" parent="MainMenu/Game Settings"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScoreSub" type="Button" parent="MainMenu/Game Settings/ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="ScoreInput" type="LineEdit" parent="MainMenu/Game Settings/ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "20"
placeholder_text = "Enter Score"

[node name="ScoreAdd" type="Button" parent="MainMenu/Game Settings/ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "+
"

[node name="GridSizeLabel" type="Label" parent="MainMenu/Game Settings"]
unique_name_in_owner = true
layout_mode = 2
text = "Grid Size:"

[node name="GridX" type="HBoxContainer" parent="MainMenu/Game Settings"]
unique_name_in_owner = true
layout_mode = 2

[node name="GridXLabel" type="Label" parent="MainMenu/Game Settings/GridX"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="GridXInput" type="LineEdit" parent="MainMenu/Game Settings/GridX"]
unique_name_in_owner = true
layout_mode = 2
text = "8"

[node name="GridY" type="HBoxContainer" parent="MainMenu/Game Settings"]
unique_name_in_owner = true
layout_mode = 2

[node name="GridYLabel" type="Label" parent="MainMenu/Game Settings/GridY"]
unique_name_in_owner = true
layout_mode = 2
text = "Y"

[node name="GridYInput" type="LineEdit" parent="MainMenu/Game Settings/GridY"]
unique_name_in_owner = true
layout_mode = 2
text = "8"

[node name="NextChipContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 22.0
offset_top = 171.0
offset_right = 62.0
offset_bottom = 211.0

[node name="SpawnMarker" type="Marker2D" parent="NextChipContainer"]
unique_name_in_owner = true
position = Vector2(41, 87)
scale = Vector2(0.99999994, 0.99999994)

[node name="Area2D" type="Area2D" parent="NextChipContainer"]
unique_name_in_owner = true
position = Vector2(40, 85)
scale = Vector2(5.323825, -5.3847847)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextChipContainer/Area2D"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_48xfa")

[node name="HoverPanel" type="Panel" parent="NextChipContainer/Area2D"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.0676208, -0.6862326)

[node name="ChipDesc" type="RichTextLabel" parent="NextChipContainer/Area2D/HoverPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.9353156
offset_top = 2.7061996
offset_right = 243.93532
offset_bottom = 50.7062
scale = Vector2(0.10982784, 0.20405564)
bbcode_enabled = true
text = "This is my text"

[node name="NextChip" type="Label" parent="NextChipContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_sk4pr")
text = "Next Chip:"

[connection signal="pressed" from="GameOver/RestartGame" to="." method="restart_game"]
[connection signal="pressed" from="MainMenu/Vbox/StartGame" to="." method="start_game"]
[connection signal="pressed" from="MainMenu/Game Settings/ScoreContainer/ScoreSub" to="." method="_on_score_sub_pressed"]
[connection signal="pressed" from="MainMenu/Game Settings/ScoreContainer/ScoreAdd" to="." method="_on_score_add_pressed"]
[connection signal="mouse_entered" from="NextChipContainer" to="." method="_on_next_chip_container_mouse_entered"]
[connection signal="mouse_exited" from="NextChipContainer" to="." method="_on_next_chip_container_mouse_exited"]
[connection signal="mouse_entered" from="NextChipContainer/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="NextChipContainer/Area2D" to="." method="_on_area_2d_mouse_exited"]
